@@ -6,12 +6,12 @@ plugins {
     id 'groovy'
     id 'idea'
     id 'jacoco'
-    id 'nebula.maven-publish' version '4.3.0'
-    id 'nebula.javadoc-jar' version '4.3.0'
-    id 'nebula.source-jar' version '4.3.0'
-    id 'nebula.maven-apache-license' version '4.3.0'
+    id 'nebula.maven-publish' version '4.4.4'
+    id 'nebula.javadoc-jar' version '4.4.4'
+    id 'nebula.source-jar' version '4.4.4'
+    id 'nebula.maven-apache-license' version '4.4.4'
     id 'nebula.optional-base' version '3.0.3'
-    id 'nebula.dependency-lock' version '4.1.0'
+    id 'nebula.dependency-lock' version '4.2.0'
     id 'nebula.nebula-release' version '3.0.5'
     id 'nebula.nebula-bintray' version '3.1.0'
     id 'nebula.info' version '3.0.3'
@@ -42,7 +42,8 @@ dependencies {
 }
 
 tasks.withType(Test) {
-    maxHeapSize = '512m'
+    maxHeapSize = '1024m'
+    jvmArgs "-XX:MaxPermSize=512m"
 }
 
 jacocoTestReport {
